--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "firebase": "^10.5.2",
     "framer-motion": "^10.12.16",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
