--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.5.2",
     "framer-motion": "^10.12.16",
     "next": "^13.5.6",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
